--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jbdc:mysql://webappproject.culiz6fsdfka.ap-southeast-1.rds.amazonaws.com:3306/UserDatabase?autoReconnect=true&useSSL=false
-spring.datasource.username=admin
-spring.datasource.password=rootroot
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://localhost:3306/login_webapp
+spring.datasource.username=root
+spring.datasource.password=pass
