Changed database source from localhost to AWS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://localhost:3306/login_webapp
-spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.url=jdbc:mariadb://login-webapp.cx6ikaolxntv.ap-southeast-1.rds.amazonaws.com:3306/login_webapp
+spring.datasource.username=admin
+spring.datasource.password=password
+
+#Use following database login in IntelliJ
+#Host: login-webapp.cx6ikaolxntv.ap-southeast-1.rds.amazonaws.com
+#Port: 3306
+#User: admin
+#Password: Password
