--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=password
 #Host: login-webapp.cx6ikaolxntv.ap-southeast-1.rds.amazonaws.com
 #Port: 3306
 #User: admin
-#Password: Password
+#Password: password
